[gd_scene load_steps=17 format=3 uid="uid://b75kf5ow47nr5"]

[ext_resource type="Script" path="res://Scripts/ui.gd" id="1_4to5w"]
[ext_resource type="Script" path="res://Scripts/game_state_manager.gd" id="1_868k4"]
[ext_resource type="Script" path="res://Scripts/camera_manager.gd" id="1_f5he6"]
[ext_resource type="Texture2D" uid="uid://f2rpmk3ppc84" path="res://Assets/button_back.png" id="1_wyrc8"]
[ext_resource type="Texture2D" uid="uid://bfth2tppcxtvt" path="res://Assets/minesweeper_atlas.png" id="2_3i5tl"]
[ext_resource type="Texture2D" uid="uid://3fgyg7ifirrs" path="res://Assets/button_back _pressed.png" id="2_6teh6"]
[ext_resource type="Script" path="res://Scripts/mines_grid.gd" id="3_8ldpf"]
[ext_resource type="FontFile" uid="uid://dx3hjdh75uimq" path="res://Assets/DS-DIGIB.TTF" id="3_vkfdu"]
[ext_resource type="Texture2D" uid="uid://bh6t6gan0urbe" path="res://Assets/button_smile.png" id="4_3sc80"]
[ext_resource type="Texture2D" uid="uid://b3ghf4gsde4l5" path="res://Assets/button_smile_pressed.png" id="5_o1dve"]
[ext_resource type="Texture2D" uid="uid://chw88re35p4lp" path="res://Assets/button_flag.png" id="8_oh1sk"]
[ext_resource type="Texture2D" uid="uid://d18l24885aoe0" path="res://Assets/TileEmpty.png" id="11_mic5c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dmllo"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pfegc"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3pfd4"]
texture = ExtResource("2_3i5tl")
margins = Vector2i(4, 4)
separation = Vector2i(8, 8)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/next_alternative_id = 2
2:2/0 = 0
2:2/1 = 1
2:2/1/custom_data_0 = true
3:2/0 = 0
4:2/0 = 0

[sub_resource type="TileSet" id="TileSet_7imvg"]
custom_data_layer_0/name = "has_mine"
custom_data_layer_0/type = 1
sources/0 = SubResource("TileSetAtlasSource_3pfd4")

[node name="main" type="Node" node_paths=PackedStringArray("mines_grid", "ui")]
script = ExtResource("1_868k4")
mines_grid = NodePath("TileMap")
ui = NodePath("TopCenter/HBoxContainer")

[node name="TopCenter" type="Marker2D" parent="."]
position = Vector2(0, -80)
scale = Vector2(0.5, 0.5)
gizmo_extents = 16.0

[node name="HBoxContainer" type="HBoxContainer" parent="TopCenter"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -104.0
offset_right = 104.0
offset_bottom = 24.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20
script = ExtResource("1_4to5w")

[node name="MinesCountPanel" type="Panel" parent="TopCenter/HBoxContainer"]
custom_minimum_size = Vector2(50, 16)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dmllo")

[node name="MinesCountLabel" type="Label" parent="TopCenter/HBoxContainer/MinesCountPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -13.0
offset_right = 20.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_vkfdu")
theme_override_font_sizes/font_size = 25
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="TextureButton" parent="TopCenter/HBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("1_wyrc8")
texture_pressed = ExtResource("2_6teh6")

[node name="GameStatusButton" type="TextureButton" parent="TopCenter/HBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("4_3sc80")
texture_pressed = ExtResource("5_o1dve")

[node name="FlagButton" type="TextureButton" parent="TopCenter/HBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("8_oh1sk")

[node name="TimerPanel" type="Panel" parent="TopCenter/HBoxContainer"]
custom_minimum_size = Vector2(50, 16)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pfegc")

[node name="TimerCountLabel" type="Label" parent="TopCenter/HBoxContainer/TimerPanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 30)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -15.0
offset_right = 25.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_vkfdu")
theme_override_font_sizes/font_size = 25
text = "001"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TopLeft" type="Marker2D" parent="."]
position = Vector2(-80, -80)
gizmo_extents = 16.0

[node name="BottomRight" type="Marker2D" parent="."]
position = Vector2(80, 80)
gizmo_extents = 16.0

[node name="Camera2D" type="Camera2D" parent="." node_paths=PackedStringArray("corner1", "corner2")]
zoom = Vector2(2, 2)
script = ExtResource("1_f5he6")
corner1 = NodePath("../TopLeft")
corner2 = NodePath("../BottomRight")

[node name="TileMap" type="TileMap" parent="." node_paths=PackedStringArray("corner1", "corner2", "ui_pos")]
tile_set = SubResource("TileSet_7imvg")
format = 2
script = ExtResource("3_8ldpf")
corner1 = NodePath("../TopLeft")
corner2 = NodePath("../BottomRight")
ui_pos = NodePath("../TopCenter")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="WinNode2D" type="Sprite2D" parent="."]
visible = false
self_modulate = Color(0, 0, 0, 0.329412)
scale = Vector2(7, 3)
texture = ExtResource("11_mic5c")

[node name="Win" type="Label" parent="WinNode2D"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -8.0
offset_right = 348.0
offset_bottom = 136.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.043, 0.1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 50
text = "You won"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="TopCenter/HBoxContainer/BackButton" to="TopCenter/HBoxContainer" method="_on_back_button_pressed"]
[connection signal="pressed" from="TopCenter/HBoxContainer/GameStatusButton" to="TopCenter/HBoxContainer" method="_on_game_status_button_pressed"]
[connection signal="pressed" from="TopCenter/HBoxContainer/FlagButton" to="." method="_on_flag_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
